Preparing update to 6.8.0